2018-02-09  Mark Wielaard  <mark@klomp.org>

	* dwarf_child.c (__libdw_find_attr): Handle DW_FORM_implicit_const.
	* dwarf_formsdata.c (dwarf_formsdata): Likewise.
	* dwarf_formudata.c (dwarf_formudata): Likewise.
	* dwarf_getabbrev.c (__libdw_getabbrev): Likewise.
	* dwarf_getattrs.c (dwarf_getattrs): Likewise.
	* dwarf_hasattr.c (dwarf_hasattr): Likewise.
	* dwarf_getabbrevattr.c (dwarf_getabbrevattr_data): New function
	that will also return any data associated with the abbrev. Which
	currently is only for DW_FORM_implicit_const. Based on...
	(dwarf_getabbrevattr): ... this function. Which now just calls
	dwarf_getabbrevattr_data.
	* libdw.h (dwarf_getabbrevattr_data): Declare new function.
	* libdw.map (ELFUTILS_0.170): Add dwarf_getabbrevattr_data.
	* libdwP.h (dwarf_getabbrevattr_data): INTDECL.
	* memory-access.h (__libdw_get_sleb128_unchecked): New inlined
	function based on __libdw_get_uleb128_unchecked.

2018-02-08  Mark Wielaard  <mark@klomp.org>

	* dwarf.h: Add DWARF5 DW_FORMs.
	* libdwP.h (__libdw_form_val_compute_len): Handle fix length
	DW_FORM_implicit_const, DW_FORM_addrx[1234], DW_FORM_strx[1234],
	DW_FORM_ref_sup[48] and DW_FORM_data16.
	* libdw_form.c (__libdw_form_val_compute_len): DW_FORM_strp_sup
	and DW_FORM_line_strp are offset_size. DW_FORM_addrx, DW_FORM_strx,
	DW_FORM_loclistx and DW_FORM_rnglistx are uleb128.

2018-01-30  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (libdw_a_SOURCES): Add dwarf_get_units.c.
	* dwarf_get_units.c: New file.
	* libdw.h (dwarf_get_units): New function declaration.
	* libdw.map (ELFUTILS_0.170): Add dwarf_get_units.

2018-01-29  Mark Wielaard  <mark@klomp.org>

	* dwarf.h (DW_UT_*): Add DWARF Unit Header Types.
	* dwarf_cu_die.c (dwarf_cu_die): Rename arguments. type_signaturep
	is now called unit_idp. type_offsetp is now called subdie_offsetp.
	* dwarf_formref_die.c (dwarf_formref_die): Scan both .debug_info
	and .debug_types sections for type units when type signature ref
	not found.