@@ -1,5 +1,9 @@
 2018-02-09  Mark Wielaard  <mark@klomp.org>
 
+	* readelf.c (attr_callback): Handle DW_FORM_data16 as Dwarf_Block.
+
+2018-02-09  Mark Wielaard  <mark@klomp.org>
+
 	* readelf.c (print_debug_abbrev_section): Print the value of a
 	DW_FORM_implicit_const using dwarf_getabbrevattr_data.
 	(attr_callback): Handle DW_FORM_implicit_const.
